EtP button layout tweaks and fixes
Removes use of inline-block/inline-flex. These were redundant as
the EtP button container is either full-width (mobile) or floated
(tablet, desktop). In both situations, `display: block` is either
desirable or enforced by the browser due to the float.

Curiously, having the `@supports` query appear before the `@media`
query seemed to be the only reason styles were broken on IE—the
`@media` query was being ignored completely. Simply swapping them
around fixed the IE layout weirdness.

--- a/src/govuk/components/exit-this-page/_index.scss
+++ b/src/govuk/components/exit-this-page/_index.scss
@@ -2,27 +2,26 @@
 
 @include govuk-exports("govuk/component/exit-this-page") {
   .govuk-exit-this-page {
+    @include govuk-responsive-padding(8, "bottom");
     z-index: 1000;
     top: 0;
     left: 0;
     width: 100%;
-    @supports (position: sticky) {
-      @include govuk-responsive-padding(8, "bottom");
-      position: sticky;
-    }
 
     @include govuk-media-query($from: tablet) {
-      display: inline-block;
-      display: inline-flex;
-      flex-direction: column;
       right: 0;
       left: auto;
       width: auto;
       float: right;
     }
+
+    @supports (position: sticky) {
+      position: sticky;
+    }
   }
 
   .govuk-exit-this-page__button {
+    width: 100%;
     margin-bottom: 0;
   }
 
@@ -85,7 +84,7 @@
       border-radius: 4px;
     }
 
-    @include mq($from: tablet) {
+    @include govuk-media-query($from: tablet) {
       display: block;
     }
   }
